--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
     "react-navigation-header-buttons": "^3.0.2",
-    "react-navigation-stack": "^1.8.0"
+    "react-navigation-stack": "^1.8.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -30,7 +33,8 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
