--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
         "react/prop-types": 0,
         "guard-for-in": 0,
         "no-restricted-syntax": 0,
-        "global-require": 0
+        "global-require": 0,
+        "no-underscore-dangle": 0
       },
     "parser": "babel-eslint",
     "settings": {
