--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-file-system": "^6.0.2",
     "expo-font": "^6.0.1",
     "expo-image-picker": "^6.0.0",
+    "expo-location": "^6.0.0",
     "expo-permissions": "^6.0.0",
     "expo-sqlite": "^6.0.0",
     "react": "16.8.3",
